--- a/parse_metabolic_genes.ipynb
+++ b/parse_metabolic_genes.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notebook to parse Foldseek Hits to PET Catabolism Enzymes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1716,13 +1723,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# B1 Processing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1926,20 +1926,6 @@
     "    command = 'cp ../B1_MAG_ESMFolds/{} ../foldseek/B1_PM_discovered_pdb/'.format(pdb)\n",
     "    subprocess.run(command, shell=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
